RESOLVED FIXED239898
REGRESSION (15.4.x): Status bar loses its color after PDF download
https://bugs.webkit.org/show_bug.cgi?id=239898
Summary REGRESSION (15.4.x): Status bar loses its color after PDF download
Jesper Bendtsen
Reported 2022-04-29 05:49:59 PDT
Created attachment 458584 [details] Expected and not expected after downloading PDF After update to iOS 15.4.x, my PWA users "added to home screen" suddenly got white status bar after downloading PDF, see attachments. Please help? Clip from index.html <link rel="manifest" href="manifest.webmanifest"> <meta name="theme-color" content="#69d01b"> <meta name="theme-color" content="#69d01b" media="(prefers-color-scheme: light)"> <meta name="theme-color" content="#69d01b" media="(prefers-color-scheme: dark)"> <meta name="mobile-web-app-capable" content="yes" /> <meta name="apple-mobile-web-app-capable" content="yes" /> <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <style> body { background - color: #69d01b!important; } </style> Clip from manifest.webmanifest: "theme_color": "#69d01b", "background_color": "#69d01b", "display": "standalone", Clip from download script: import { saveAs } from 'file-saver'; saveAs( new Blob([bytes], { type: 'application/pdf' }), `${filename} _Preview.pdf` );
Attachments
Expected and not expected after downloading PDF (6.96 KB, application/x-zip-compressed)
2022-04-29 05:49 PDT, Jesper Bendtsen
no flags
Radar WebKit Bug Importer
Comment 1 2022-04-29 14:47:39 PDT
Smoley
Comment 2 2022-05-02 10:51:23 PDT
Thanks for filing, I think this issue may require a fix outside of WebKit. Can you please file a report via feedbackassistant.apple.com and include a sysdiagnose and a link to the PWA? Thanks.
Jesper Bendtsen
Comment 3 2022-05-02 11:16:22 PDT
How to create an sysdiagnose? The PWA is not public, login is required.
Smoley
Comment 4 2022-05-04 09:48:55 PDT
(In reply to Jesper Bendtsen from comment #3) > How to create an sysdiagnose? The PWA is not public, login is required. https://developer.apple.com/services-account/download?path=/iOS/iOS_Logs/sysdiagnose_Logging_Instructions.pdf
Jesper Bendtsen
Comment 5 2022-05-16 23:37:40 PDT
I get no response at feedbackassistant.apple.com. I have now created an demo to show the error: https://mango-tree-0ed834c03.1.azurestaticapps.net/
Brent Fulgham
Comment 6 2022-06-30 10:27:03 PDT
The work is tracked outside of WebKit in this radar: <rdar://93402362>
Jesper Bendtsen
Comment 7 2022-08-07 23:25:57 PDT
Any status on this, is it still happening in iOS 15.6? Cannot access the radar link.
Devin Rousso
Comment 8 2022-08-11 10:14:48 PDT
this is actually an issue in WebKit
Devin Rousso
Comment 9 2022-08-11 11:31:57 PDT
EWS
Comment 10 2022-08-12 01:29:41 PDT
Committed 253372@main (89cbb8ee6ca0): <https://commits.webkit.org/253372@main> Reviewed commits have been landed. Closing PR #3231 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.