Cherry-pick 89cbb8ee6ca0. rdar://problem/93402362

REGRESSION (15.4.x): Status bar loses its color after PDF download
    https://bugs.webkit.org/show_bug.cgi?id=239898
    <rdar://problem/92544725>

    Reviewed by Tim Horton.

    * Source/WebKit/UIProcess/ios/WKPDFView.mm:
    (-[WKPDFView web_initWithFrame:webView:mimeType:]):
    243980@main changed `WKScrollView` to have a `-[WKScrollView _setBackgroundColorInternal:]` in order
    to know whether the `backgroundColor` is being set by WebKit or by the owner of the `WKWebView`. The
    former allows for WebKit to continue automatically updating the `backgroundColor` based on the page
    content, whereas the latter means WebKit should not as the client explicitly asked for that color.
    Since `WKPDFView` is an internal implementation detail of WebKit, it should fall into the former.

    * Source/WebKit/UIProcess/API/ios/WKWebViewIOS.h:
    * Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
    (-[WKWebView _wkScrollView]): Added.
    (-[WKWebView _updateScrollViewBackground]):
    * Source/WebKit/UIProcess/ios/WKScrollView.mm:
    (-[WKScrollView _setBackgroundColorInternal:]):
    Expose a way for internal logic to access the `WKScrollView` from the `WKWebView`.

    * Tools/TestWebKitAPI/Tests/WebKitCocoa/WKPDFView.mm:
    (TEST.WKPDFView.BackgroundColor): Added.
    * Tools/TestWebKitAPI/Tests/WebKit/red.html: Added.
    * Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:

    Canonical link: https://commits.webkit.org/253372@main

Canonical link: https://commits.webkit.org/252432.170@safari-7614-branch