Source/WebKit/UIProcess/ios/WKScrollView.mm
@@ -241,6 +241,8 @@ static BOOL shouldForwardScrollViewDelegateMethodToExternalDelegate(SEL selector
         return;
 
     super.backgroundColor = backgroundColor;
+
+    [_internalDelegate _resetCachedScrollViewBackgroundColor];
 }
 
 - (void)setIndicatorStyle:(UIScrollViewIndicatorStyle)indicatorStyle
